# binsparse-reference-cpp

./: CMakeLists.txt
examples/: CMakeLists.txt  benchmark_hdf5_simple.cpp  benchmark_read.cpp  benchmark_util.hpp  benchmark_write.cpp  run_benchmark.sh
include/binsparse/: binsparse.hpp  hdf5_tools.hpp
include/binsparse/matrix_market/: matrix_market_read.hpp
test/gtest/: CMakeLists.txt  coo_metall_test.cpp  coo_test.cpp  csr_metall_test.cpp  csr_test.cpp
